--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     <h1 id="main_title">Title</h1>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="javascript.js"></script>
+    <div id="score"></div>
+<div id="score2"></div>
+ <h4>Are you right handed<h4>
+  <button class="q1" id="q1_yes" >Yes</button>
+  <button class="q1" id="q1_no">No</button>
+  <h4>Is English is your first language?<h4>
+  <button class="q2" id="q2_yes">Yes</button>
+  <button class="q2" id="q2_no">No</button>
+    
   </body>
 </html>
