--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
     <title>Privilege</title>
   </head>
   <body>
-    <h1 id="main_title">Title</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="javascript.js"></script>
-    <div id="score"></div>
-<div id="score2"></div>
- <h4>Are you right handed<h4>
-  <button class="q1" id="q1_yes" >Yes</button>
-  <button class="q1" id="q1_no">No</button>
-  <h4>Is English is your first language?<h4>
-  <button class="q2" id="q2_yes">Yes</button>
-  <button class="q2" id="q2_no">No</button>
+    <div id="scoreYes"></div>
+<div id="scoreNo"></div>
+<p class="question"></p>
+<button class="button-yes">Yes</button>
+<button class="button-no">No</button>
     
   </body>
 </html>
