--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>Privilege</title>
   </head>
   <body>
-    <div id="scoreYes"></div>
+   <div class="container">
+<h1>Title here</h1>
+<p class="result">User's privilege.</p>
+<div id="scoreYes"></div>
+<br/>
 <div id="scoreNo"></div>
+<p class="messageAboutPrivilege"></p>
 <p class="question"></p>
+<p class="notes">some text</p>
 <button class="button-yes">Yes</button>
 <button class="button-no">No</button>
+<button class="button-next">Next</button>
+</div>
+</div>
     
   </body>
 </html>
