--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   <body>
    <div class="container">
 <h1>Title here</h1>
-<p class="result">User's privilege.</p>
-<div id="scoreYes"></div>
-<br/>
-<div id="scoreNo"></div>
+<p class="result">Thank you for your time.</p>
 <p class="messageAboutPrivilege"></p>
 <p class="question"></p>
 <p class="notes">some text</p>
