--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Privilege</title>
   </head>
   <body>
-   <div class="container">
+  <div class="container">
+<h1>SURVEY: TEST HERE</h1>
+<p class="end">Thank you for your time.</p>
+<div id="Yes"></div>
+<br/>
+<div id="No"></div>
+<p class="question"></p>
+<p class="notes">some text</p>
+<button class="button-yes">Yes</button>
+<button class="button-no">No</button>
+<button class="button-next">Next</button>
+ 
+</div>
+</div> <div class="container">
 <h1>Title here</h1>
 <p class="result">Thank you for your time.</p>
 <p class="messageAboutPrivilege"></p>
