--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Privilege</title>
   </head>
   <body>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ <script src="javascript.js"></script>
   <div class="container">
 <h1>SURVEY: TEST HERE</h1>
 <p class="end">Thank you for your time.</p>
