--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
   </head>
   <body>
  <div class="container">
-<h1>SURVEY: TEST HERE</h1>
-<p class="end">Thank you for your time.</p>
-<div id="Yes"></div>
-<br/>
-<div id="No"></div>
-<p class="question"></p>
-<p class="notes">some text</p>
-<button class="button-yes">Yes</button>
-<button class="button-no">No</button>
-<button class="button-next">Next</button>
- 
+<h1>TEST YOUR PRIVILEGE</h1>
+<img src = "https://mir-s3-cdn-cf.behance.net/project_modules/1400/3ad34548729565.58a08f536c5ae.jpg">
+</br>
+<p class="intro"><b>Has a stranger ever touched your hair, laughed at you for being homosexual or teased you for something you cannot change?</b></br>
+  </br>
+
+  Well, welcome to the Privilege Test. Thank you for taking the time to fill in this questionnaire to create a healthy conversation about our advantages as people over other groups and individuals. Before we start, let us inform you that by analysing privilege
+  we hope to create more suitable and understanding spaces for cultures to thrive. By knowing your privilege we want to make people aware of their advantages over another person or group. While this test is subjective, some questions may be triggering
+  but we would like for you to answer them truthfully and introspectively.</br>
+  <i>Thank you for your time.</i></br>
+  Now let’s #CheckYourPrivilege….
+</p>
+</br>
+<p class="end">Thank you for your time.
+  <b>CONCLUSION:</b> That’s it for now. We hope these questions offered an understanding of how power and privilege can control our lives. Being more cognisant of how we interact and communicate each other can give way for a culture of acceptance and
+  inclusion. Checking who we are and how we engage is the way of the future and community. </p>
+
+  <div id="Yes"></div>
+  <br/>
+  <div id="No"></div>
+  <p class="question"></p>
+  <p class="notes">some text</p>
+  <button class="button-yes">Yes</button>
+  <button class="button-no">No</button>
+  <button class="button-next">Next</button>
+
 </div>
 </div>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
- <script src="javascript.js"></script>
   </body>
 </html>
