--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
 
 </div>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="javascript.js"></script>
   </body>
 </html>
